[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/Font/ImprovGOLD.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI/ButtonTheme.tres" type="Theme" id=2]
[ext_resource path="res://Scripts/Tabs/pirate_creek.gd" type="Script" id=3]
[ext_resource path="res://AdPictures/Audio Clips/pop-up3.mp3" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=2]
size = 32
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = -5
extra_spacing_bottom = -1
extra_spacing_space = -3
font_data = ExtResource( 1 )

[node name="Pirate Creek" type="Tabs"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 9.0
margin_right = -63.0
margin_bottom = -55.0
theme = ExtResource( 2 )
script = ExtResource( 3 )

[node name="WindowContent" type="ScrollContainer" parent="."]
margin_left = -1.0
margin_right = 283.0
margin_bottom = 174.0
theme = ExtResource( 2 )

[node name="PirateCreek" type="ColorRect" parent="WindowContent"]
margin_right = 284.0
margin_bottom = 300.0
rect_min_size = Vector2( 284, 300 )
color = Color( 0, 0, 0, 1 )

[node name="ProgressBar" type="ProgressBar" parent="WindowContent/PirateCreek"]
visible = false
margin_left = 82.0
margin_top = 78.0
margin_right = 196.0
margin_bottom = 86.0
theme = ExtResource( 2 )
step = 1.0
rounded = true

[node name="WindowContent" type="Label" parent="WindowContent/PirateCreek"]
margin_left = 73.0
margin_top = 26.0
margin_right = 207.0
margin_bottom = 56.0
theme = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "Pirate Creek"
align = 1

[node name="LineEdit" type="LineEdit" parent="WindowContent/PirateCreek"]
margin_left = 63.0
margin_top = 88.0
margin_right = 215.0
margin_bottom = 104.0
max_length = 32

[node name="SearchButton" type="Button" parent="WindowContent/PirateCreek"]
margin_left = 222.0
margin_top = 88.0
margin_right = 268.0
margin_bottom = 104.0
text = "Download"
icon_align = 1

[node name="MovieButton" type="Button" parent="WindowContent/PirateCreek"]
margin_left = 53.0
margin_top = 139.0
margin_right = 99.0
margin_bottom = 155.0
text = "Random Movie"
icon_align = 1

[node name="GameButton" type="Button" parent="WindowContent/PirateCreek"]
margin_left = 115.0
margin_top = 139.0
margin_right = 161.0
margin_bottom = 155.0
text = "Random Game"
icon_align = 1

[node name="AdButton" type="Button" parent="WindowContent/PirateCreek"]
margin_left = 176.0
margin_top = 139.0
margin_right = 222.0
margin_bottom = 155.0
text = "Fun AD"
icon_align = 1

[node name="DownloadNote" type="Label" parent="WindowContent/PirateCreek"]
margin_left = 41.0
margin_top = 69.0
margin_right = 236.0
margin_bottom = 76.0
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.576471, 0.576471, 0.576471, 1 )
align = 1
valign = 2
autowrap = true

[node name="TextInputNote" type="Label" parent="WindowContent/PirateCreek"]
margin_left = 41.0
margin_top = 107.0
margin_right = 236.0
margin_bottom = 114.0
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.776471, 0.215686, 0.215686, 1 )
align = 1
valign = 2
autowrap = true

[node name="CloseButton" type="Button" parent="."]
margin_left = -1.0
margin_right = 21.0
margin_bottom = 8.0
text = "close"

[node name="Timer" type="Timer" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="text_entered" from="WindowContent/PirateCreek/LineEdit" to="." method="_on_text_entered"]
[connection signal="pressed" from="WindowContent/PirateCreek/SearchButton" to="." method="_on_search_pressed"]
[connection signal="pressed" from="WindowContent/PirateCreek/MovieButton" to="." method="_random_search"]
[connection signal="pressed" from="WindowContent/PirateCreek/GameButton" to="." method="_random_search"]
[connection signal="pressed" from="WindowContent/PirateCreek/AdButton" to="." method="_on_ad_pressed"]
